--- a/_config.yml
+++ b/_config.yml
@@ -105,8 +105,8 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  name             : "LEE JUNSEOK"
+  avatar           : ![1679120346274](https://github.com/JULLEONG/JULLEONG/assets/117628817/c2be0faa-c83a-4a4f-9773-6aa32e0c0d3d)
   bio              : "I am an **amazing** person."
   location         : "Somewhere"
   email            :
