--- a/_config.yml
+++ b/_config.yml
@@ -105,11 +105,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "LEE JUNSEOK"
+  name             : "JULLEONG"
   avatar           : "/assets/avatar.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
-  email            :
+  bio              : "Data Beginner"
+  location         : "South Korea"
+  email            : "enk9778@naver.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
