--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 author:
   name             : "JULLEONG"
   avatar           : "/assets/avatar.jpg"
-  bio              : "**Data Beginner**"<br>매일 공부하고 기록하는 습
+  bio              : "**Data Beginner**"<br>매일 공부하고 기록하는 습관
   location         : "South Korea"
   email            :
   links:
