--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 # Site Author
 author:
   name             : "JULLEONG"
-  avatar           : "/assets/profile.jpg"
+  avatar           : "/assets/profile_1.jpg"
   bio              : "**Data Beginner**<br>매일 공부하고 기록하는 습관"
   location         : "South Korea"
   email            :
